[package]
name = "letstalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "letstalk-server"
path = "src/main.rs"


[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20"
rustls-pemfile = "1.0"
actix-web-actors = "4.1"
bytestring = "1.1"
ring = "0.16"
hex = "0.4.3"

byteorder = "1.2"
bytes = "1"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.8"